# MnL-Code-Patching

./: .gitignore  README.md  bis.asm  justfile
.github/workflows/: build.yml  check.yml
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: lib.rs
rust/src/bis/: custom.rs  mod.rs
rust/src/nds/: alloc.rs  mmio.rs  mod.rs  nocash.rs
rust/src/nds/nitro/fs/: file.rs
rust/src/nds/nitro/os/common/: alloc.rs
