[package]
name = "mnl_code_patches"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[profile.dev]
panic = "abort"
codegen-units = 1
opt-level = 3
lto = true

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "z"
strip = "debuginfo"
lto = true

[dependencies]
custom-print = { version = "1.0.0", default-features = false, features = ["alloc"] }
thiserror = { version = "2.0.12", default-features = false }
voladdress = "1.4.0"
